# de-zoomcamp

./: .env.example  .gitignore  Makefile  README.md  docker-compose.yml  pyproject.toml
dashboard/: __init__.py  streamlit_app.py
dbt/tfl_cycle_analytics/: .user.yml  dbt_project.yml  profiles.yml
dbt/tfl_cycle_analytics/models/marts/: dim_station.sql  fct_trips.sql  mart_daily_ridership.sql  mart_duration_distribution.sql  mart_station_popularity.sql
dbt/tfl_cycle_analytics/models/staging/: src_tfl.yml  stg_journeys.sql  stg_stations.sql
docker/airflow/: Dockerfile
orchestration/dags/: tfl_cycle_pipeline.py
pipeline/: Dockerfile  ingest_data.py  notebook.ipynb  pipeline.py  pyproject.toml
src/tfl_cycle_analytics/: __init__.py  cli.py  config.py  dashboard_export.py  dbt_runner.py  processing.py  sources.py  utils.py  warehouse.py
terraform/: main.tf  outputs.tf  variables.tf
tests/fixtures/raw/: 2024-01-sample.csv  source_index.html  stations_sample.json
tests/integration/: test_airflow_dags.py  test_dashboard_app.py  test_spark_normalize.py
tests/unit/: test_sources.py  test_utils.py
