[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "tfl-cycle-demand-analytics"
version = "0.1.0"
description = "TfL Santander Cycle batch analytics capstone built with the DE Zoomcamp stack."
readme = "README.md"
requires-python = ">=3.11,<3.13"
dependencies = [
  "beautifulsoup4>=4.12.3,<5.0.0",
  "dbt-bigquery>=1.8.0,<1.11.0",
  "dbt-core>=1.8.0,<1.11.0",
  "dbt-duckdb>=1.8.0,<1.11.0",
  "duckdb>=1.2.1,<2.0.0",
  "google-cloud-bigquery>=3.30.0,<4.0.0",
  "google-cloud-storage>=2.19.0,<3.0.0",
  "pandas>=2.2.3,<3.0.0",
  "pyarrow>=18.1.0,<20.0.0",
  "pyspark>=3.5.4,<4.0.0",
  "requests>=2.32.3,<3.0.0",
  "streamlit>=1.44.0,<2.0.0",
  "tenacity>=9.0.0,<10.0.0",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.3.5,<9.0.0",
]

[project.scripts]
tfl-cycle = "tfl_cycle_analytics.cli:main"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src", "."]
